load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "clustersql",
    srcs = [
        "settings.go",
        "zones.go",
    ],
    importpath = "github.com/cockroachdb/cockroach-operator/pkg/clustersql",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_cockroachdb_errors//:errors",
        "@com_github_dustin_go_humanize//:go-humanize",
        "@in_gopkg_yaml_v2//:yaml_v2",
    ],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [":package-srcs"],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
