load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "settings.go",
        "zones.go",
    ],
    importpath = "github.com/cockroachdb/cockroach-operator/pkg/clustersql",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_cockroachdb_errors//:go_default_library",
        "@com_github_dustin_go_humanize//:go_default_library",
        "@in_gopkg_yaml_v2//:go_default_library",
    ],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [":package-srcs"],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = [
        "settings_test.go",
        "zones_test.go",
    ],
    deps = [
        ":go_default_library",
        "@com_github_cockroachdb_errors//:go_default_library",
        "@com_github_data_dog_go_sqlmock//:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
        "@com_github_stretchr_testify//require:go_default_library",
        "@in_gopkg_yaml_v2//:go_default_library",
    ],
)
