load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "clusterstatus",
    srcs = ["clusterstatus.go"],
    importpath = "github.com/cockroachdb/cockroach-operator/pkg/clusterstatus",
    visibility = ["//visibility:public"],
    deps = [
        "//apis/v1alpha1",
        "@io_k8s_apimachinery//pkg/apis/meta/v1:meta",
    ],
)

go_test(
    name = "clusterstatus_test",
    srcs = ["clusterstatus_test.go"],
    embed = [":clusterstatus"],
    deps = [
        "//apis/v1alpha1",
        "@com_github_stretchr_testify//assert",
    ],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [":package-srcs"],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
