load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "condition",
    srcs = ["condition.go"],
    importpath = "github.com/cockroachdb/cockroach-operator/pkg/condition",
    visibility = ["//visibility:public"],
    deps = [
        "//apis/v1alpha1",
        "@io_k8s_apimachinery//pkg/apis/meta/v1:meta",
    ],
)

go_test(
    name = "condition_test",
    srcs = ["condition_test.go"],
    embed = [":condition"],
    deps = [
        "//apis/v1alpha1",
        "@com_github_stretchr_testify//assert",
        "@io_k8s_apimachinery//pkg/apis/meta/v1:meta",
    ],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [":package-srcs"],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
